<resources>

    <!--    STRINGS-->
    <string name="app_name">HotOrNot</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="first_person_name">Ivan</string>
    <string name="first_person_last_name">Ivanov</string>
    <string name="first_person_email">ivan_ivanov@gmail.com</string>
    <string name="first_person_interests">Drag Queens</string>
    <string name="first_person_rating">Hot</string>
    <string name="second_person_name">Georgi</string>
    <string name="second_person_last_name">Kolarov</string>
    <string name="second_person_email">goshkoshuta@gmail.com</string>
    <string name="second_person_interests">Males</string>
    <string name="second_person_rating">Hot</string>
    <string name="third_person_name">Stan</string>
    <string name="third_person_last_name">Nikolov</string>
    <string name="third_person_email">stan4o10@gmail.com</string>
    <string name="third_person_interests">Apache helicopters</string>
    <string name="third_person_rating">Not</string>
    <string name="main_screen_buttons_text">Not</string>
    <string name="hot" translatable="false">Hot</string>
    <string name="not" translatable="false">Not</string>
    <string name="app_text">ヾ(´∀｀○)ﾉ</string>
    <string name="register">REGISTER</string>
    <string name="create_account">Create account</string>
    <string name="last_name">Last Name</string>
    <string name="name">First Name</string>
    <string name="edit_text_helper_text_required">Required*</string>
    <string name="delete_user">Delete user</string>
    <string name="email">Email</string>
    <string name="other">Other</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="interests">Interests</string>
    <string name="profile_screen_title">Profile</string>
    <string name="navigation" translatable="false">navigation</string>
    <string name="field_required">Field is required</string>
    <string name="email_say_hello" translatable="false">zdr bepce ko pr</string>
    <string name="email_subject" translatable="false">Android dev</string>
    <string name="email_chooser_text">Send with</string>
    <string name="email_type" translatable="false">text/plain</string>
    <string name="enter_valid_email">Please enter a valid email!</string>
    <string name="gallery_select_image_text">Select Picture</string>
    <string name="select_option">Please select option!</string>
    <string name="gallery_type" translatable="false">image/*</string>
    <string name="who_is_hot">Who Is\nHOT ?</string>
    <string name="i_am_button">I AM</string>
    <string name="cant_run">Can\'t run from yourself!!</string>
    <string name="white_space" translatable="false">\u0020</string>
    <string name="no_more_suggestions">Nobody here but us chickens!</string>
    <string name="language_english" translatable="false">english</string>

    <!--    STRINGS-->

    <!--    INTEGERS-->
    <integer name="name_max_chars">100</integer>
    <integer name="zero">0</integer>
    <integer name="one">1</integer>
    <integer name="two">2</integer>
    <item name="thirty_three_percents" format="float" type="dimen">0.33</item>
    <item name="guidelineStart" format="float" type="integer">0.33</item>
    <item name="guidelineEnd" format="float" type="integer">0.66</item>
    <item name="guidelineBottom" format="float" type="integer">0.9</item>
    "@integer/guidelineStart"
    <!--    INTEGERS-->

    <!--    ARRAYS-->
    <string-array name="interests_array">
        <item>Apache Helicopters</item>
        <item>Males</item>
        <item>Females</item>
        <item>Drag Queens</item>
        <item>Furries</item>
    </string-array>

    <string-array name="characteristics">
        <item>Traveling</item>
        <item>Techno lover</item>
        <item>Animal lover</item>
        <item>Model</item>
        <item>Running</item>
        <item>Training</item>
        <item>Football</item>
        <item>Music</item>
        <item>Motorcycles</item>
        <item>Photography</item>
        <item>Learning</item>
        <item>Art</item>
        <item>Sport</item>
        <item>Films</item>
        <item>Cooking</item>
        <item>Coding</item>
        <item>Gaming</item>
    </string-array>
    <!--    ARRAYS-->
</resources>