<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/first_layout_background"
    tools:context=".RegistrationScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:indeterminate="true"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/createAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appLogo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingHorizontal="40dp"
            app:boxStrokeColor="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/createAccountTextView"
            app:layout_constraintStart_toStartOf="@id/createAccountTextView"
            app:layout_constraintTop_toBottomOf="@+id/createAccountTextView"
            app:startIconDrawable="@drawable/ic_login_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:paddingHorizontal="40dp"
            app:boxStrokeColor="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/createAccountTextView"
            app:layout_constraintStart_toStartOf="@id/createAccountTextView"
            app:layout_constraintTop_toBottomOf="@id/firstNameTextLayout"
            app:startIconDrawable="@drawable/ic_login_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="150dp"
            android:layout_height="65dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/card_view_background"
            android:hint="@string/create_account"
            android:textColorHint="@color/black"
            app:cornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameTextLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>